# malka

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.builder  Dockerfile.sample  LICENSE  README.md  docker-compose.yml  sample.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docker-hub.yml  rust.yml
example/: main.tf
malka-consumer/: Cargo.toml
malka-consumer/src/: conf.rs  error.rs  main.rs  manager.rs
malka-consumer/src/aws/: lambda_publisher.rs  mod.rs
malka-consumer/src/kafka/: consumer.rs  defaults.rs  mod.rs  subscriber.rs
