[package]
name = "malka-consumer"
version = "0.2.0"
authors = ["Miere Teixeira <miere.teixeira@gmail.com>"]
edition = "2018"

[dependencies]
thiserror = "1.0.0"
serde = "1.0.0"
serde_json = "1.0.0"
log = "0.4.14"
rdkafka = { version = "0.25", features = ["cmake-build","tokio","ssl-vendored"] }
rusoto_core = "0.46.0"
rusoto_lambda = "0.46.0"
tokio = "1.8"
futures = "0.3.13"
async-trait = "0.1.42"
bytes = "1.0.1"
env_logger = "0.8.3"

[features]
integration_tests = []
